Assignment_5/assgn_4_21CS30059_21CS30038.output
Nonterminals useless in grammar

    expressionopt


Terminals unused in grammar

    OF
    KEYWORD
    PUNCTUATOR
    SINGLE_LINE_COMMENT
    MULTI_LINE_COMMENT
    ERROR


State 105 conflicts: 1 reduce/reduce
State 123 conflicts: 14 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: translation-unit $end

    1 primary-expression: IDENTIFIER
    2                   | INTEGER
    3                   | FLOAT
    4                   | CHARACTER_CONSTANT
    5                   | ENUMERATION_CONST
    6                   | STRING_LITERAL
    7                   | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    8 postfix-expression: primary-expression
    9                   | postfix-expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
   10                   | postfix-expression LEFT_PARENTHESIS argument-expression-listopt RIGHT_PARENTHESIS
   11                   | postfix-expression DOT IDENTIFIER
   12                   | postfix-expression ARROW IDENTIFIER
   13                   | postfix-expression INCREMENT
   14                   | postfix-expression DECREMENT
   15                   | LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS LEFT_CURLY_BRACKET initializer-list RIGHT_CURLY_BRACKET
   16                   | LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS LEFT_CURLY_BRACKET initializer-list COMMA RIGHT_CURLY_BRACKET

   17 argument-expression-list: assignment-expression
   18                         | argument-expression-list COMMA assignment-expression

   19 argument-expression-listopt: argument-expression-list
   20                            | ε

   21 unary-expression: postfix-expression
   22                 | INCREMENT unary-expression
   23                 | DECREMENT unary-expression
   24                 | unary-operator cast-expression
   25                 | SIZEOF unary-expression
   26                 | SIZEOF LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS

   27 unary-operator: AND
   28               | STAR
   29               | PLUS
   30               | MINUS
   31               | TILDE
   32               | NOT

   33 cast-expression: unary-expression
   34                | LEFT_PARENTHESIS type-name RIGHT_PARENTHESIS cast-expression

   35 multiplicative-expression: cast-expression
   36                          | multiplicative-expression STAR cast-expression
   37                          | multiplicative-expression DIV cast-expression
   38                          | multiplicative-expression MOD cast-expression

   39 additive-expression: multiplicative-expression
   40                    | additive-expression PLUS multiplicative-expression
   41                    | additive-expression MINUS multiplicative-expression

   42 shift-expression: additive-expression
   43                 | shift-expression LEFT_SHIFT additive-expression
   44                 | shift-expression RIGHT_SHIFT additive-expression

   45 relational-expression: shift-expression
   46                      | relational-expression LESS_THAN shift-expression
   47                      | relational-expression GREATER_THAN shift-expression
   48                      | relational-expression LESS_THAN_EQUAL shift-expression
   49                      | relational-expression GREATER_THAN_EQUAL shift-expression

   50 equality-expression: relational-expression
   51                    | equality-expression EQUAL_TO relational-expression
   52                    | equality-expression NOT_EQUAL_TO relational-expression

   53 AND-expression: equality-expression
   54               | AND-expression AND equality-expression

   55 exclusive-OR-expression: AND-expression
   56                        | exclusive-OR-expression XOR AND-expression

   57 inclusive-OR-expression: exclusive-OR-expression
   58                        | inclusive-OR-expression OR exclusive-OR-expression

   59 logical-AND-expression: inclusive-OR-expression
   60                       | logical-AND-expression AND_AND M inclusive-OR-expression

   61 logical-OR-expression: logical-AND-expression
   62                      | logical-OR-expression OR_OR M logical-AND-expression

   63 conditional-expression: logical-OR-expression
   64                       | logical-OR-expression N QUESTION M expression N COLON M conditional-expression

   65 M: ε

   66 N: ε

   67 assignment-expression: conditional-expression
   68                      | unary-expression ASSIGNMENT_OPERATOR assignment-expression

   69 expression: assignment-expression
   70           | expression COMMA assignment-expression

   71 constant-expression: conditional-expression

   72 declaration: declaration-specifiers init-declarator-listopt SEMICOLON

   73 init-declarator-listopt: init-declarator-list
   74                        | ε

   75 declaration-specifiers: storage-class-specifier declaration-specifiers
   76                       | storage-class-specifier
   77                       | TYPE_SPECIFIER_TOKEN declaration-specifiers
   78                       | TYPE_SPECIFIER_TOKEN
   79                       | type-qualifier declaration-specifiers
   80                       | type-qualifier
   81                       | function-specifier declaration-specifiers
   82                       | function-specifier

   83 type-qualifier: TYPE_QUALIFIER

   84 init-declarator-list: init-declarator
   85                     | init-declarator-list COMMA init-declarator

   86 init-declarator: declarator
   87                | declarator EQUALS initializer

   88 type-specifier: VOID
   89               | CHAR
   90               | SHORT
   91               | INT
   92               | LONG
   93               | FLOAT
   94               | DOUBLE
   95               | SIGNED
   96               | UNSIGNED
   97               | BOOL
   98               | COMPLEX
   99               | IMAGINARY
  100               | enum-specifier

  101 storage-class-specifier: STORAGE_CLASS_SPECIFIER
  102                        | STATIC_TOKEN

  103 specifier-qualifier-list: type-specifier specifier-qualifier-listopt
  104                         | enum-specifier specifier-qualifier-listopt
  105                         | TYPE_QUALIFIER specifier-qualifier-listopt

  106 specifier-qualifier-listopt: specifier-qualifier-list
  107                            | ε

  108 enum-specifier: ENUM identifieropt LEFT_CURLY_BRACKET enumerator-list RIGHT_CURLY_BRACKET
  109               | ENUM IDENTIFIER
  110               | ENUM identifieropt LEFT_CURLY_BRACKET enumerator-list COMMA RIGHT_CURLY_BRACKET

  111 identifieropt: IDENTIFIER
  112              | ε

  113 enumerator-list: enumerator
  114                | enumerator-list COMMA enumerator

  115 enumerator: IDENTIFIER
  116           | IDENTIFIER EQUALS constant-expression

  117 function-specifier: FUNCTION_SPECIFIER

  118 declarator: pointer direct-declarator
  119           | direct-declarator

  120 direct-declarator: IDENTIFIER
  121                  | LEFT_PARENTHESIS declarator RIGHT_PARENTHESIS
  122                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list RIGHT_SQUARE_BRACKET
  123                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list assignment-expression RIGHT_SQUARE_BRACKET
  124                  | direct-declarator LEFT_SQUARE_BRACKET assignment-expression RIGHT_SQUARE_BRACKET
  125                  | direct-declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  126                  | direct-declarator LEFT_SQUARE_BRACKET STATIC_TOKEN type-qualifier-list assignment-expression RIGHT_SQUARE_BRACKET
  127                  | direct-declarator LEFT_SQUARE_BRACKET STATIC_TOKEN assignment-expression RIGHT_SQUARE_BRACKET
  128                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list STATIC_TOKEN assignment-expression RIGHT_SQUARE_BRACKET
  129                  | direct-declarator LEFT_SQUARE_BRACKET type-qualifier-list STAR RIGHT_SQUARE_BRACKET
  130                  | direct-declarator LEFT_SQUARE_BRACKET STAR RIGHT_SQUARE_BRACKET
  131                  | direct-declarator LEFT_PARENTHESIS change-table parameter-type-list RIGHT_PARENTHESIS
  132                  | direct-declarator LEFT_PARENTHESIS identifier-list RIGHT_PARENTHESIS
  133                  | direct-declarator LEFT_PARENTHESIS change-table RIGHT_PARENTHESIS

  134 type-qualifier-listopt: type-qualifier-list
  135                       | ε

  136 pointer: STAR type-qualifier-listopt
  137        | STAR type-qualifier-listopt pointer

  138 type-qualifier-list: TYPE_QUALIFIER
  139                    | type-qualifier-list TYPE_QUALIFIER

  140 parameter-type-list: parameter-list
  141                    | parameter-list COMMA ELLIPSIS

  142 parameter-list: parameter-declaration
  143               | parameter-list COMMA parameter-declaration

  144 parameter-declaration: declaration-specifiers declarator
  145                      | declaration-specifiers

  146 identifier-list: IDENTIFIER
  147                | identifier-list COMMA IDENTIFIER

  148 type-name: specifier-qualifier-list

  149 initializer: assignment-expression
  150            | LEFT_CURLY_BRACKET initializer-list RIGHT_CURLY_BRACKET
  151            | LEFT_CURLY_BRACKET initializer-list COMMA RIGHT_CURLY_BRACKET

  152 initializer-list: designationopt initializer
  153                 | initializer-list COMMA designationopt initializer

  154 designationopt: designation
  155               | ε

  156 designation: designator-list EQUALS

  157 designator-list: designator
  158                | designator-list designator

  159 designator: LEFT_SQUARE_BRACKET constant-expression RIGHT_SQUARE_BRACKET
  160           | DOT IDENTIFIER

  161 statement: labeled-statement
  162          | compound-statement
  163          | expression-statement
  164          | selection-statement
  165          | iteration-statement
  166          | jump-statement

  167 loop-statement: labeled-statement
  168               | expression-statement
  169               | selection-statement
  170               | iteration-statement
  171               | jump-statement

  172 labeled-statement: IDENTIFIER COLON statement
  173                  | CASE constant-expression COLON statement
  174                  | DEFAULT COLON statement

  175 compound-statement: LEFT_CURLY_BRACKET A change-table block-item-listopt RIGHT_CURLY_BRACKET

  176 A: ε

  177 change-table: ε

  178 block-item-listopt: block-item-list
  179                   | ε

  180 block-item-list: block-item
  181                | block-item-list M block-item

  182 block-item: declaration
  183           | statement

  184 expression-statement: expression SEMICOLON
  185                     | SEMICOLON

  186 selection-statement: IF LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement N
  187                    | IF LEFT_PARENTHESIS expression N RIGHT_PARENTHESIS M statement N ELSE M statement
  188                    | SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement

  189 iteration-statement: WHILE W LEFT_PARENTHESIS A change-table M expression RIGHT_PARENTHESIS M loop-statement
  190                    | WHILE W LEFT_PARENTHESIS A change-table M expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET M block-item-listopt RIGHT_CURLY_BRACKET
  191                    | DO D M loop-statement M WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
  192                    | DO D LEFT_CURLY_BRACKET M block-item-listopt RIGHT_CURLY_BRACKET M WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
  193                    | FOR F LEFT_PARENTHESIS A change-table declaration M expression-statement M expression N RIGHT_PARENTHESIS M loop-statement
  194                    | FOR F LEFT_PARENTHESIS A change-table expression-statement M expression-statement M expression N RIGHT_PARENTHESIS M loop-statement
  195                    | FOR F LEFT_PARENTHESIS A change-table declaration M expression-statement M expression N RIGHT_PARENTHESIS M LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET
  196                    | FOR F LEFT_PARENTHESIS A change-table expression-statement M expression-statement M expression N RIGHT_PARENTHESIS M LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

  197 F: ε

  198 W: ε

  199 D: ε

  200 jump-statement: GOTO IDENTIFIER SEMICOLON
  201               | CONTINUE SEMICOLON
  202               | BREAK SEMICOLON
  203               | RETURN expression SEMICOLON
  204               | RETURN SEMICOLON

  205 translation-unit: external-declaration
  206                 | translation-unit external-declaration

  207 external-declaration: function-definition
  208                     | declaration

  209 function-definition: declaration-specifiers declarator declaration-listopt change-table LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

  210 declaration-listopt: declaration-list
  211                    | ε

  212 declaration-list: declaration
  213                 | declaration-list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <pointer> (258) 1 11 12 109 111 115 116 120 146 147 160 172 200
    INTEGER <intval> (259) 2
    FLOAT <floatval> (260) 3 93
    CHARACTER_CONSTANT <charval> (261) 4
    STRING_LITERAL <charval> (262) 6
    ENUM (263) 108 109 110
    TYPE_SPECIFIER_TOKEN (264) 77 78
    STORAGE_CLASS_SPECIFIER (265) 101
    STATIC_TOKEN (266) 102 126 127 128
    FUNCTION_SPECIFIER (267) 117
    CASE (268) 173
    DEFAULT (269) 174
    SIZEOF (270) 25 26
    OF (271)
    ELSE (272) 187
    SWITCH (273) 188
    WHILE (274) 189 190 191 192
    DO (275) 191 192
    FOR (276) 193 194 195 196
    GOTO (277) 200
    CONTINUE (278) 201
    BREAK (279) 202
    RETURN (280) 203 204
    TYPE_QUALIFIER (281) 83 105 138 139
    KEYWORD (282)
    ENUMERATION_CONST (283) 5
    PUNCTUATOR (284)
    ASSIGNMENT_OPERATOR (285) 68
    SINGLE_LINE_COMMENT (286)
    MULTI_LINE_COMMENT (287)
    ERROR (288)
    VOID (289) 88
    CHAR (290) 89
    SHORT (291) 90
    INT (292) 91
    LONG (293) 92
    DOUBLE (294) 94
    SIGNED (295) 95
    UNSIGNED (296) 96
    BOOL (297) 97
    COMPLEX (298) 98
    IMAGINARY (299) 99
    IF (300) 186 187
    EQUALS (301) 87 116 156
    INCREMENT (302) 13 22
    DECREMENT (303) 14 23
    AND (304) 27 54
    STAR (305) 28 36 129 130 136 137
    PLUS (306) 29 40
    MINUS (307) 30 41
    TILDE (308) 31
    NOT (309) 32
    DIV (310) 37
    MOD (311) 38
    LEFT_SHIFT (312) 43
    RIGHT_SHIFT (313) 44
    LESS_THAN (314) 46
    GREATER_THAN (315) 47
    LESS_THAN_EQUAL (316) 48
    GREATER_THAN_EQUAL (317) 49
    EQUAL_TO (318) 51
    NOT_EQUAL_TO (319) 52
    XOR (320) 56
    OR (321) 58
    AND_AND (322) 60
    OR_OR (323) 62
    QUESTION (324) 64
    COLON (325) 64 172 173 174
    SEMICOLON (326) 72 184 185 191 192 200 201 202 203 204
    COMMA (327) 16 18 70 85 110 114 141 143 147 151 153
    LEFT_SQUARE_BRACKET (328) 9 122 123 124 125 126 127 128 129 130 159
    RIGHT_SQUARE_BRACKET (329) 9 122 123 124 125 126 127 128 129 130 159
    LEFT_CURLY_BRACKET (330) 15 16 108 110 150 151 175 190 192 195 196 209
    RIGHT_CURLY_BRACKET (331) 15 16 108 110 150 151 175 190 192 195 196 209
    LEFT_PARENTHESIS (332) 7 10 15 16 26 34 121 131 132 133 186 187 188 189 190 191 192 193 194 195 196
    RIGHT_PARENTHESIS (333) 7 10 15 16 26 34 121 131 132 133 186 187 188 189 190 191 192 193 194 195 196
    DOT (334) 11 160
    ELLIPSIS (335) 141
    ARROW (336) 12
    LOWER_THAN_ELSE (337)


Nonterminals, with rules where they appear

    $accept (83)
        on left: 0
    primary-expression <exp> (84)
        on left: 1 2 3 4 5 6 7
        on right: 8
    postfix-expression <Array> (85)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 9 10 11 12 13 14 21
    argument-expression-list <numParams> (86)
        on left: 17 18
        on right: 18 19
    argument-expression-listopt <numParams> (87)
        on left: 19 20
        on right: 10
    unary-expression <Array> (88)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 68
    unary-operator <operator> (89)
        on left: 27 28 29 30 31 32
        on right: 24
    cast-expression <Array> (90)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative-expression <exp> (91)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive-expression <exp> (92)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift-expression <exp> (93)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational-expression <exp> (94)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality-expression <exp> (95)
        on left: 50 51 52
        on right: 51 52 53 54
    AND-expression <exp> (96)
        on left: 53 54
        on right: 54 55 56
    exclusive-OR-expression <exp> (97)
        on left: 55 56
        on right: 56 57 58
    inclusive-OR-expression <exp> (98)
        on left: 57 58
        on right: 58 59 60
    logical-AND-expression <exp> (99)
        on left: 59 60
        on right: 60 61 62
    logical-OR-expression <exp> (100)
        on left: 61 62
        on right: 62 63 64
    conditional-expression <exp> (101)
        on left: 63 64
        on right: 64 67 71
    M <intval> (102)
        on left: 65
        on right: 60 62 64 181 186 187 189 190 191 192 193 194 195 196
    N <stmt> (103)
        on left: 66
        on right: 64 186 187 193 194 195 196
    assignment-expression <exp> (104)
        on left: 67 68
        on right: 17 18 68 69 70 123 124 126 127 128 149
    expression <exp> (105)
        on left: 69 70
        on right: 7 9 64 70 184 186 187 188 189 190 191 192 193 194 195 196 203
    constant-expression <exp> (106)
        on left: 71
        on right: 116 159 173
    declaration (107)
        on left: 72
        on right: 182 193 195 208 212 213
    init-declarator-listopt (108)
        on left: 73 74
        on right: 72
    declaration-specifiers (109)
        on left: 75 76 77 78 79 80 81 82
        on right: 72 75 77 79 81 144 145 209
    type-qualifier (110)
        on left: 83
        on right: 79 80
    init-declarator-list (111)
        on left: 84 85
        on right: 73 85
    init-declarator <pointer> (112)
        on left: 86 87
        on right: 84 85
    type-specifier (113)
        on left: 88 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 103
    storage-class-specifier (114)
        on left: 101 102
        on right: 75 76
    specifier-qualifier-list (115)
        on left: 103 104 105
        on right: 106 148
    specifier-qualifier-listopt (116)
        on left: 106 107
        on right: 103 104 105
    enum-specifier (117)
        on left: 108 109 110
        on right: 100 104
    identifieropt (118)
        on left: 111 112
        on right: 108 110
    enumerator-list (119)
        on left: 113 114
        on right: 108 110 114
    enumerator (120)
        on left: 115 116
        on right: 113 114
    function-specifier (121)
        on left: 117
        on right: 81 82
    declarator <pointer> (122)
        on left: 118 119
        on right: 86 87 121 144 209
    direct-declarator <pointer> (123)
        on left: 120 121 122 123 124 125 126 127 128 129 130 131 132 133
        on right: 118 119 122 123 124 125 126 127 128 129 130 131 132 133
    type-qualifier-listopt (124)
        on left: 134 135
        on right: 136 137
    pointer <pointer> (125)
        on left: 136 137
        on right: 118 137
    type-qualifier-list (126)
        on left: 138 139
        on right: 122 123 126 128 129 134 139
    parameter-type-list (127)
        on left: 140 141
        on right: 131
    parameter-list (128)
        on left: 142 143
        on right: 140 141 143
    parameter-declaration (129)
        on left: 144 145
        on right: 142 143
    identifier-list (130)
        on left: 146 147
        on right: 132 147
    type-name (131)
        on left: 148
        on right: 15 16 26 34
    initializer <numParams> (132)
        on left: 149 150 151
        on right: 87 152 153
    initializer-list (133)
        on left: 152 153
        on right: 15 16 150 151 153
    designationopt (134)
        on left: 154 155
        on right: 152 153
    designation (135)
        on left: 156
        on right: 154
    designator-list (136)
        on left: 157 158
        on right: 156 158
    designator (137)
        on left: 159 160
        on right: 157 158
    statement <stmt> (138)
        on left: 161 162 163 164 165 166
        on right: 172 173 174 183 186 187 188
    loop-statement <stmt> (139)
        on left: 167 168 169 170 171
        on right: 189 191 193 194
    labeled-statement <stmt> (140)
        on left: 172 173 174
        on right: 161 167
    compound-statement <stmt> (141)
        on left: 175
        on right: 162
    A (142)
        on left: 176
        on right: 175 189 190 193 194 195 196
    change-table (143)
        on left: 177
        on right: 131 133 175 189 190 193 194 195 196 209
    block-item-listopt <stmt> (144)
        on left: 178 179
        on right: 175 190 192 195 196 209
    block-item-list <stmt> (145)
        on left: 180 181
        on right: 178 181
    block-item <stmt> (146)
        on left: 182 183
        on right: 180 181
    expression-statement <exp> (147)
        on left: 184 185
        on right: 163 168 193 194 195 196
    selection-statement <stmt> (148)
        on left: 186 187 188
        on right: 164 169
    iteration-statement <stmt> (149)
        on left: 189 190 191 192 193 194 195 196
        on right: 165 170
    F (150)
        on left: 197
        on right: 193 194 195 196
    W (151)
        on left: 198
        on right: 189 190
    D (152)
        on left: 199
        on right: 191 192
    jump-statement <stmt> (153)
        on left: 200 201 202 203 204
        on right: 166 171
    translation-unit (154)
        on left: 205 206
        on right: 0 206
    external-declaration (155)
        on left: 207 208
        on right: 205 206
    function-definition (156)
        on left: 209
        on right: 207
    declaration-listopt (157)
        on left: 210 211
        on right: 209
    declaration-list (158)
        on left: 212 213
        on right: 210 213


State 0

    0 $accept: • translation-unit $end

    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5

    declaration              go to state 6
    declaration-specifiers   go to state 7
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10
    translation-unit         go to state 11
    external-declaration     go to state 12
    function-definition      go to state 13


State 1

   77 declaration-specifiers: TYPE_SPECIFIER_TOKEN • declaration-specifiers
   78                       | TYPE_SPECIFIER_TOKEN •

    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5

    $default  reduce using rule 78 (declaration-specifiers)

    declaration-specifiers   go to state 14
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10


State 2

  101 storage-class-specifier: STORAGE_CLASS_SPECIFIER •

    $default  reduce using rule 101 (storage-class-specifier)


State 3

  102 storage-class-specifier: STATIC_TOKEN •

    $default  reduce using rule 102 (storage-class-specifier)


State 4

  117 function-specifier: FUNCTION_SPECIFIER •

    $default  reduce using rule 117 (function-specifier)


State 5

   83 type-qualifier: TYPE_QUALIFIER •

    $default  reduce using rule 83 (type-qualifier)


State 6

  208 external-declaration: declaration •

    $default  reduce using rule 208 (external-declaration)


State 7

   72 declaration: declaration-specifiers • init-declarator-listopt SEMICOLON
  209 function-definition: declaration-specifiers • declarator declaration-listopt change-table LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

    IDENTIFIER        shift, and go to state 15
    STAR              shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 17

    $default  reduce using rule 74 (init-declarator-listopt)

    init-declarator-listopt  go to state 18
    init-declarator-list     go to state 19
    init-declarator          go to state 20
    declarator               go to state 21
    direct-declarator        go to state 22
    pointer                  go to state 23


State 8

   79 declaration-specifiers: type-qualifier • declaration-specifiers
   80                       | type-qualifier •

    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5

    $default  reduce using rule 80 (declaration-specifiers)

    declaration-specifiers   go to state 24
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10


State 9

   75 declaration-specifiers: storage-class-specifier • declaration-specifiers
   76                       | storage-class-specifier •

    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5

    $default  reduce using rule 76 (declaration-specifiers)

    declaration-specifiers   go to state 25
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10


State 10

   81 declaration-specifiers: function-specifier • declaration-specifiers
   82                       | function-specifier •

    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5

    $default  reduce using rule 82 (declaration-specifiers)

    declaration-specifiers   go to state 26
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10


State 11

    0 $accept: translation-unit • $end
  206 translation-unit: translation-unit • external-declaration

    $end                     shift, and go to state 27
    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5

    declaration              go to state 6
    declaration-specifiers   go to state 7
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10
    external-declaration     go to state 28
    function-definition      go to state 13


State 12

  205 translation-unit: external-declaration •

    $default  reduce using rule 205 (translation-unit)


State 13

  207 external-declaration: function-definition •

    $default  reduce using rule 207 (external-declaration)


State 14

   77 declaration-specifiers: TYPE_SPECIFIER_TOKEN declaration-specifiers •

    $default  reduce using rule 77 (declaration-specifiers)


State 15

  120 direct-declarator: IDENTIFIER •

    $default  reduce using rule 120 (direct-declarator)


State 16

  136 pointer: STAR • type-qualifier-listopt
  137        | STAR • type-qualifier-listopt pointer

    TYPE_QUALIFIER  shift, and go to state 29

    $default  reduce using rule 135 (type-qualifier-listopt)

    type-qualifier-listopt  go to state 30
    type-qualifier-list     go to state 31


State 17

  121 direct-declarator: LEFT_PARENTHESIS • declarator RIGHT_PARENTHESIS

    IDENTIFIER        shift, and go to state 15
    STAR              shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 17

    declarator         go to state 32
    direct-declarator  go to state 22
    pointer            go to state 23


State 18

   72 declaration: declaration-specifiers init-declarator-listopt • SEMICOLON

    SEMICOLON  shift, and go to state 33


State 19

   73 init-declarator-listopt: init-declarator-list •
   85 init-declarator-list: init-declarator-list • COMMA init-declarator

    COMMA  shift, and go to state 34

    $default  reduce using rule 73 (init-declarator-listopt)


State 20

   84 init-declarator-list: init-declarator •

    $default  reduce using rule 84 (init-declarator-list)


State 21

   86 init-declarator: declarator •
   87                | declarator • EQUALS initializer
  209 function-definition: declaration-specifiers declarator • declaration-listopt change-table LEFT_CURLY_BRACKET block-item-listopt RIGHT_CURLY_BRACKET

    TYPE_SPECIFIER_TOKEN     shift, and go to state 1
    STORAGE_CLASS_SPECIFIER  shift, and go to state 2
    STATIC_TOKEN             shift, and go to state 3
    FUNCTION_SPECIFIER       shift, and go to state 4
    TYPE_QUALIFIER           shift, and go to state 5
    EQUALS                   shift, and go to state 35

    LEFT_CURLY_BRACKET  reduce using rule 211 (declaration-listopt)
    $default            reduce using rule 86 (init-declarator)

    declaration              go to state 36
    declaration-specifiers   go to state 37
    type-qualifier           go to state 8
    storage-class-specifier  go to state 9
    function-specifier       go to state 10
    declaration-listopt      go to state 38
    declaration-list         go to state 39


State 22

  119 declarator: direct-declarator •
  122 direct-declarator: direct-declarator • LEFT_SQUARE_BRACKET type-qualifier-list RIGHT_SQUARE_BRACKET
  123                  | direct-declarator • LEFT_SQUARE_BRACKET type-qualifier-list assignment-expression RIGHT_SQUARE_BRACKET
  124                  | direct-declarator • LEFT_SQUARE_BRACKET assignment-expression RIGHT_SQUARE_BRACKET
  125                  | direct-declarator • LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  126                  | direct-declarator • LEFT_SQUARE_BRACKET STATIC_TOKEN type-qualifier-list assignment-expression RIGHT_SQUARE_BRACKET
  127                  | direct-declarator • LEFT_SQUARE_BRACKET STATIC_TOKEN assignment-expression RIGHT_SQUARE_BRACKET
  128                  | direct-declarator • LEFT_SQUARE_BRACKET type-qualifier-list STATIC_TOKEN assignment-expression RIGHT_SQUARE_BRACKET
  129                  | direct-declarator • LEFT_SQUARE_BRACKET type-qualifier-list STAR RIGHT_SQUARE_BRACKET
  130                  | direct-declarator • LEFT_SQUARE_BRACKET STAR RIGHT_SQUARE_BRACKET
  131                  | direct-declarator • LEFT_PARENTHESIS change-table parameter-type-list RIGHT_PARENTHESIS
  132                  | direct-declarator • LEFT_PARENTHESIS identifier-list RIGHT_PARENTHESIS
  133                  | direct-declarator • LEFT_PARENTHESIS change-table RIGHT_PARENTHESIS

    LEFT_SQUARE_BRACKET  shift, and go to state 40
    LEFT_PARENTHESIS     shift, and go to state 41

    $default  reduce using rule 119 (declarator)


State 23

  118 declarator: pointer • direct-declarator

    IDENTIFIER        shift, and go to state 15
    LEFT_PARENTHESIS  shift, and go to state 17

    direct-declarator  go to state 42


State 24

   79 declaration-specifiers: type-qualifier declaration-specifiers •

    $default  reduce using rule 79 (declaration-specifiers)


State 25

   75 declaration-specifiers: storage-class-specifier declaration-specifiers •

    $default  reduce using rule 75 (declaration-specifiers)


State 26

   81 declaration-specifiers: function-specifier declaration-specifiers •

    $default  reduce using rule 81 (declaration-specifiers)


State 27

    0 $accept: translation-unit $end •

    $default  accept


State 28

  206 translation-unit: translation-unit external-declaration •

    $default  reduce using rule 206 (translation-unit)


State 29

  138 type-qualifier-list: TYPE_QUALIFIER •

    $default  reduce using rule 138 (type-qualifier-list)


State 30

  136 pointer: STAR type-qualifier-listopt •
  137        | STAR type-qualifier-listopt • pointer

    STAR  shift, and go to state 16

    $default  reduce using rule 136 (pointer)

    pointer  go to state 43


State 31

  134 type-qualifier-listopt: type-qualifier-list •
  139 type-qualifier-list: type-qualifier-list • TYPE_QUALIFIER

    TYPE_QUALIFIER  shift, and go to state 44

    $default  reduce using rule 134 (type-qualifier-listopt)


State 32

  121 direct-declarator: LEFT_PARENTHESIS declarator • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 45


State 33

   72 declaration: declaration-specifiers init-declarator-listopt SEMICOLON •

    $default  reduce using rule 72 (declaration)


State 34

   85 init-declarator-list: init-declarator-list COMMA • init-declarator

    IDENTIFIER        shift, and go to state 15
    STAR              shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 17

    init-declarator    go to state 46
    declarator         go to state 47
    direct-declarator  go to state 22
    pointer            go to state 23


State 35

   87 init-declarator: declarator EQUALS • initializer

    IDENTIFIER          shift, and go to state 48
    INTEGER             shift, and go to state 49
    FLOAT               shift, and go to state 50
    CHARACTER_CONSTANT  shift, and go to state 51
    STRING_LITERAL      shift, and go to state 52
    SIZEOF              shift, and go to state 53
    ENUMERATION_CONST   shift, and go to state 54
    INCREMENT           shift, and go to state 55
    DECREMENT           shift, and go to state 56
    AND                 shift, and go to state 57
    STAR                shift, and go to state 58
    PLUS                shift, and go to state 59
    MINUS               shift, and go to state 60
    TILDE               shift, and go to state 61
    NOT                 shift, and go to state 62
    LEFT_CURLY_BRACKET  shift, and go to state 63
    LEFT_PARENTHESIS    shift, and go to state 64
